@@ -340,6 +340,8 @@ int pslr_get_model_buffer_size(pslr_handle_t h);
 int pslr_get_model_fastest_shutter_speed(pslr_handle_t h);
 int pslr_get_model_base_iso_min(pslr_handle_t h);
 int pslr_get_model_base_iso_max(pslr_handle_t h);
+int pslr_get_model_extended_iso_min(pslr_handle_t h);
+int pslr_get_model_extended_iso_max(pslr_handle_t h);
 int *pslr_get_model_jpeg_resolutions(pslr_handle_t h);
 bool pslr_get_model_only_limited(pslr_handle_t h);
 
